--- a/GraphicEditor/View/Building1/Building1SecondFloorPlan.xaml
+++ b/GraphicEditor/View/Building1/Building1SecondFloorPlan.xaml
@@ -1,29 +1,27 @@
-﻿<Page x:Class="GraphicEditor.Building1FloorPlan"
+﻿<Page x:Class="GraphicEditor.View.Building1.Building1SecondFloorPlan"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:GraphicEditor"
+      xmlns:local="clr-namespace:GraphicEditor.View.Building1"
       mc:Ignorable="d" 
       d:DesignHeight="652" d:DesignWidth="766"
-      Title="Building1FloorPlan">
+      Title="Building1SecondFloorPlan">
 
     <Grid>
         <Canvas x:Name="canvasBuild1fl1" Background="MintCream">
             <Label Content="Hospital 1" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="Black" Canvas.Left="249" Canvas.Top="36"/>
-            <Button Content="Up" Canvas.Left="249" Canvas.Top="127" Height="35" Width="268" Click="buttonUp"/>
+            <Button Content="DOWN" Canvas.Left="249" Canvas.Top="530" Height="35" Width="268" Click="buttonDown"/>
             <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Height="260" Width="595" Canvas.Left="86"  Canvas.Top="196"/>
             <Rectangle Fill="White" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Left="86" Canvas.Top="196" />
             <Rectangle Fill="White" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Top="356" Canvas.Left="136" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="196" />
             <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="196" />
             <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="631" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
             <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="581" Stroke="Black" StrokeThickness="3" Canvas.Top="196" />
             <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="196" />
             <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="196" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="581" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
+            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
             <Line X1="10" Y1="10" X2="10" Y2="30" Stroke="Black" 
                   StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="392" Canvas.Top="256"/>
             <Line X1="10" Y1="35" X2="5" Y2="30" Stroke="Black" 
@@ -47,7 +45,6 @@
             </Line>
             <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="378" Canvas.Top="196"/>
             <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="481" Canvas.Top="196"/>
-            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="378" Canvas.Top="356"/>
             <Line X1="0" Y1="0" X2="0" Y2="-80" Stroke="Black" StrokeThickness="6" Canvas.Left="431" Canvas.Top="296"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="295"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="285"/>
@@ -58,12 +55,15 @@
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="235"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="225"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="215"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="381" Stroke="Black" StrokeThickness="3" Canvas.Top="406"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="431" Stroke="Black" StrokeThickness="3" Canvas.Top="406"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="286" Stroke="Black" StrokeThickness="3" Canvas.Top="246"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="286" Stroke="Black" StrokeThickness="3" Canvas.Top="196"/>
             <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="406"/>
             <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="356" RenderTransformOrigin="0.948,0.611"/>
             <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="136" Stroke="Black" StrokeThickness="3" Canvas.Top="196"/>
             <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="136" Stroke="Black" StrokeThickness="3" Canvas.Top="246"/>
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="436" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="336" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="286" Stroke="Black" StrokeThickness="3" Canvas.Top="356" />
         </Canvas>
     </Grid>
 </Page>
