--- a/WebApplicationFrontend/src/app/app.component.html
+++ b/WebApplicationFrontend/src/app/app.component.html
@@ -1,2 +1,7 @@
-
-<app-all-feedback></app-all-feedback>>
+<html>
+    <head>
+    </head>
+    <body>
+        <router-outlet></router-outlet>
+    </body>
+</html>
