--- a/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.css
+++ b/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.css
@@ -7,26 +7,39 @@
 
 
 mat-card {
-    width: 300px;
+    max-width: 300px;
     padding-bottom: 20px;
-    background-color : #f2f2f2;
-    
+    background-color: #f2f2f2;
+   
 }
 
 mat-card-content {
     padding-top: 10px;
 }
+mat-card-actions{
+    text-align: right;
+}
+
 
 .content-paragraph {
     font-size: 20px;
 }
 
 .title-paragraph {
-    font-size: 16px;
+    font-size: 25px;
+    text-align: left;
     
 }
 
-.date-paragraph {
-    font-size: 14px;
-    padding-left: 18px;
+.subtitle-paragraph {
+    font-size: 13x;
+    padding-left: 0px;
+    
 }
+
+#id {
+    text-align: center;
+    font-size: 40px;
+    padding-top: 10px;
+}
+
