:iphone: Implemented frontend logic and design

--- a/WebApplicationFrontend/src/app/app.component.html
+++ b/WebApplicationFrontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-approved-feedback></app-approved-feedback>
+<html>
+    <head>
+    </head>
+    <body>
+        <router-outlet></router-outlet>
+    </body>
+</html>
