--- a/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
@@ -1,26 +1,24 @@
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <mat-list>
-                <mat-list-item *ngFor="let feedback of approvedFeedback">  
-                    
+    <div class="row" *ngFor="let feedback of approvedFeedback">
                     <mat-card>
                         <mat-card-title>
-                            <p class="title-paragraph">{{ feedback.Username }}</p>
+                            <p class="title-paragraph" *ngIf="feedback.Anonymous">Anonymous</p>
+                            <p class="title-paragraph" *ngIf="!feedback.Anonymous"> {{ feedback.Username }}</p>
                         </mat-card-title>
                         <mat-divider></mat-divider>
                         <mat-card-content>
-                            <p class="content-paragraph">{{ feedback.AdditionalNotes }}</p>
+                          
+                            <div class="limit">
+                                <p class="content-paragraph">{{ feedback.AdditionalNotes }}</p>
+                            </div>
                         </mat-card-content>
-                           
+                        <mat-divider></mat-divider>
                         <mat-card-footer>
                             <p class="date-paragraph">{{ feedback.Date | date: 'dd/MM/yyyy'}}</p>
                         </mat-card-footer>
                     </mat-card>
-                </mat-list-item>
                 
-            </mat-list>
-        </div>
+                    
     </div>
     
 </div>
