--- a/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.css
+++ b/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.css
@@ -1,32 +1,47 @@
-.container {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    padding-top: 5vw;
+.row {
+    padding-top: 20px;
   }
 
-
 mat-card {
-    width: 300px;
-    padding-bottom: 20px;
+    min-width: 40vw;
+    max-width: 40vw;
     background-color : #f2f2f2;
-    
 }
 
 mat-card-content {
-    padding-top: 10px;
+    margin-top: 16px;
 }
+
+mat-card-footer {
+    margin-top: 3px;
+    text-align: right;
+    margin-right: 3px;
+}
+
+
 
 .content-paragraph {
     font-size: 20px;
 }
 
+mat-card-title {
+    margin-bottom: 4px;
+    margin-top: 4px;
+}
+
+.limit {
+    word-wrap: break-word;
+}
+
 .title-paragraph {
     font-size: 16px;
-    
+    font-weight: bold;
+    margin-bottom: 0px;
 }
 
 .date-paragraph {
-    font-size: 14px;
+    font-size: 12px;
     padding-left: 18px;
+    margin-bottom: 0px;
+    font-weight: lighter;
 }
