--- a/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.html
@@ -1,21 +1,20 @@
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <mat-list>
-                <mat-list-item *ngFor="let feedback of allFeedback">  
+    
+            
+                <div class="row" *ngFor="let feedback of allFeedback">  
                     
                     <mat-card>
-                        <mat-card-header> 
+                        
                             <mat-card-title>
-                                <p class="title-paragraph">{{ feedback.Username }} </p>
-                                
+                                <p class="title-paragraph" *ngIf="feedback.Anonymous">Anonymous</p>
+                                <p class="title-paragraph" *ngIf="!feedback.Anonymous"> {{ feedback.Username }}</p>
                                
                             </mat-card-title>
-                            <mat-divider></mat-divider>
+                            
                             <mat-card-subtitle>
                                 <p class="subtitle-paragraph">{{ feedback.Date | date: 'dd/MM/yyyy'}}</p>
                             </mat-card-subtitle>
-                        </mat-card-header>
+                       
                         <mat-divider></mat-divider>
                         <mat-card-content>
                             <p class="content-paragraph">{{ feedback.AdditionalNotes }}</p>
@@ -24,21 +23,20 @@
                         
                         <mat-card-content>
                             <p class="content-paragraph" *ngIf="feedback.Approved">Status: Approved</p>
-                            <p class="content-paragraph" *ngIf="!feedback.Approved">Not Approved</p>
+                            <p class="content-paragraph" *ngIf="!feedback.Approved">Status: Not Approved</p>
                             
                         </mat-card-content>
                            
                         <mat-card-actions>
-                            <button mat-raised-button id="button" *ngIf="feedback.Approved">Approve</button>
-                            <button mat-raised-button id="button" *ngIf="!feedback.Approved">Deny</button>
+                            <button mat-raised-button id="button" *ngIf="!feedback.Approved">Approve</button>
+                            <button mat-raised-button id="button" *ngIf="feedback.Approved">Deny</button>
 
                         </mat-card-actions>
                     </mat-card>
-                </mat-list-item>
+               
                 
-            </mat-list>
-        </div>
-    </div>
+        
+    
     
 </div>
 
