#sitne izmene u zgradi1

--- a/GraphicEditor/MainWindow.xaml
+++ b/GraphicEditor/MainWindow.xaml
@@ -17,12 +17,13 @@
     </Window.Triggers>
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="68" VerticalAlignment="Top" Background="#006481" Grid.ColumnSpan="2">
+            <Image Width="60" Margin="5,0,0,0" Source="Logo.png"/>
             <Label Content="Hospital map" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="White"/>
         </StackPanel>
         <DockPanel DockPanel.Dock="Left" Background="SteelBlue">
             <Label DockPanel.Dock="Top" Content="Informations:" FontFamily="Arial" FontWeight="Bold" FontSize="25" Foreground="White"/>
             <DockPanel DockPanel.Dock="Bottom">
-                <local:Legend  x:Name="legenda"  VerticalAlignment="Center" HorizontalAlignment="Center"   Visibility="Collapsed" Height="372" Width="244"></local:Legend>
+                <local:Legend  x:Name="legenda"  VerticalAlignment="Center" HorizontalAlignment="Center"   Visibility="Collapsed" Height="220" Width="250"></local:Legend>
             </DockPanel>
             <TabControl SelectionChanged="TabControl_SelectionChanged" x:Name="tabControl">
                 <TabItem x:Name="MAP" Header="Map">
