--- a/GraphicEditor/View/Legend.xaml
+++ b/GraphicEditor/View/Legend.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GraphicEditor"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="250" x:Name="legend">
-    <StackPanel VerticalAlignment="Center" Height="299" Margin="0,0,-0.4,0">
+             d:DesignHeight="220" d:DesignWidth="250" x:Name="legend">
+    <StackPanel VerticalAlignment="Center" Margin="0,0,-0.4,0">
         <Label DockPanel.Dock="Top" Content="Legend:" FontFamily="Arial" FontWeight="Bold" FontSize="25" Foreground="White"/>
         <Grid Height="150" RenderTransformOrigin="0.5,0.5" Margin="20,20,50,20">
             <Grid.RenderTransform>
