--- a/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/approvedFeedback/approved-feedback/approved-feedback.component.html
@@ -3,7 +3,7 @@
                     <mat-card>
                         <mat-card-title>
                             <p class="title-paragraph" *ngIf="feedback.Anonymous">Anonymous</p>
-                            <p class="title-paragraph" *ngIf="!feedback.Anonymous"> {{ feedback.Username }}</p>
+                            <p class="title-paragraph" *ngIf="!feedback.Anonymous"> {{ feedback.Name }} {{ feedback.Surname }}</p>
                         </mat-card-title>
                         <mat-divider></mat-divider>
                         <mat-card-content>
