--- a/GraphicEditor/View/Building2/Building2GroundFloorPlan.xaml
+++ b/GraphicEditor/View/Building2/Building2GroundFloorPlan.xaml
@@ -9,32 +9,98 @@
       Title="Building2FloorPlan">
 
     <Grid>
-        <Canvas x:Name="canvas"  Margin="0,0,0,0" Background="MintCream">
-            <Label Content="H2" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="Black" Canvas.Left="324" Canvas.Top="36"/>
-            <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Height="758" Width="200" Canvas.Left="259" Canvas.Top="-131" RenderTransformOrigin="0.5,0.5">
-                <Rectangle.RenderTransform>
+        <Canvas x:Name="canvasBuild2fl1" Background="MintCream">
+            <Label Content="Hospital 2" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="Black" Canvas.Left="249" Canvas.Top="36"/>
+            <Image Source="arrowUp.png" Width="60" Canvas.Left="348" Canvas.Top="113" MouseLeftButtonDown="mouseClickArrowUp"/>
+            <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Height="260" Width="595" Canvas.Left="86"  Canvas.Top="196"/>
+            <Rectangle Fill="White" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Left="86" Canvas.Top="196" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="184" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="382" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="581" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Line X1="10" Y1="10" X2="10" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="392" Canvas.Top="256"/>
+            <Line X1="10" Y1="35" X2="5" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="391" Canvas.Top="257"/>
+            <Line X1="10" Y1="35" X2="15" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="392" Canvas.Top="258"/>
+            <Line X1="10" Y1="10" X2="10" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="442" Canvas.Top="263"/>
+            <Line X1="35" Y1="10" X2="30" Y2="5" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="423" Canvas.Top="263"/>
+            <Line X1="10" Y1="35" X2="5" Y2="30" Stroke="Black" 
+                  StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="429" Canvas.Top="253" RenderTransformOrigin="0.5,0.5">
+                <Line.RenderTransform>
                     <TransformGroup>
-                        <ScaleTransform ScaleY="0.788" ScaleX="1.27"/>
-                        <SkewTransform AngleY="-0.152"/>
-                        <RotateTransform Angle="-89.936"/>
-                        <TranslateTransform X="-0.46" Y="-0.522"/>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="271.364"/>
+                        <TranslateTransform/>
                     </TransformGroup>
-                </Rectangle.RenderTransform>
-            </Rectangle>
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="61" Stroke="Black" StrokeThickness="3" Canvas.Top="271" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="61" Stroke="Black" StrokeThickness="3" Canvas.Top="123" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="161" Stroke="Black" StrokeThickness="3" Canvas.Top="271" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="261" Stroke="Black" StrokeThickness="3" Canvas.Top="271" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="556" Stroke="Black" StrokeThickness="3" Canvas.Top="124" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="556" Stroke="Black" StrokeThickness="3" Canvas.Top="273" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="456" Stroke="Black" StrokeThickness="3" Canvas.Top="124" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="456" Stroke="Black" StrokeThickness="3" Canvas.Top="273" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="261" Stroke="Black" StrokeThickness="3" Canvas.Top="123" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="161" Stroke="Black" StrokeThickness="3" Canvas.Top="124" />
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="408" Stroke="Black" StrokeThickness="3" Canvas.Top="273" />
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="408" Stroke="Black" StrokeThickness="3" Canvas.Top="322" />
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="406" Stroke="Black" StrokeThickness="3" Canvas.Top="124" />
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="406" Stroke="Black" StrokeThickness="3" Canvas.Top="173" />
+                </Line.RenderTransform>
+            </Line>
+            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="378" Canvas.Top="196"/>
+            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="481" Canvas.Top="196"/>
+            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="380" Canvas.Top="356"/>
+            <Line X1="0" Y1="0" X2="0" Y2="-80" Stroke="Black" StrokeThickness="6" Canvas.Left="431" Canvas.Top="296"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="295"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="285"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="275"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="265"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="255"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="245"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="235"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="225"/>
+            <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="215"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="356" RenderTransformOrigin="0.948,0.611" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="86" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="135" Stroke="Black" StrokeThickness="3" Canvas.Top="197" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" />
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="232" Stroke="Black" StrokeThickness="3" Canvas.Top="197" RenderTransformOrigin="0.948,0.611" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
+            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="195" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
         </Canvas>
+        <Popup x:Name="PopupPatientRoom"
+                   AllowsTransparency="True"
+                   HorizontalOffset="10"
+                   VerticalOffset="10">
+
+            <Grid>
+                <local:PopupPatientRoom x:Name="PatientRoom" Foreground="#E0FFFF"/>
+            </Grid>
+        </Popup>
+        <Popup x:Name="PopupExaminationRoom"
+                   AllowsTransparency="True"
+                   HorizontalOffset="10"
+                   VerticalOffset="10">
+
+            <Grid>
+                <local:PopupExaminationRoom x:Name="ExaminationRoom" Foreground="#E0FFFF"/>
+            </Grid>
+        </Popup>
+        <Popup x:Name="PopupOperatingRoom"
+                   AllowsTransparency="True"
+                   HorizontalOffset="10"
+                   VerticalOffset="10">
+
+            <Grid>
+                <local:PopupOperatingRoom x:Name="OperatingRoom" Foreground="#E0FFFF"/>
+            </Grid>
+        </Popup>
+        <Popup x:Name="PopupAuxiliaryRoom"
+                   AllowsTransparency="True"
+                   HorizontalOffset="10"
+                   VerticalOffset="10">
+
+            <Grid>
+                <local:PopupAuxiliaryRoom x:Name="AuxiliaryRoom" Foreground="#E0FFFF"/>
+            </Grid>
+        </Popup>
+        <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Margin="232,246,484,356" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
+        <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" RenderTransformOrigin="0.948,0.611" Margin="628,196,88,406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
+        <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" RenderTransformOrigin="0.948,0.611" Margin="628,406,88,196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
+        <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" RenderTransformOrigin="0.948,0.611" Margin="628,246,88,356" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
     </Grid>
 </Page>
