:sparkles: implemented functionality for posting feedback and saving data to database

--- a/WebApplicationFrontend/src/app/app.component.html
+++ b/WebApplicationFrontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-post-feedback></app-post-feedback>
+<html>
+    <head>
+    </head>
+    <body>
+        <router-outlet></router-outlet>
+    </body>
+</html>
