--- a/WebApplicationFrontend/src/app/feedback/post-feedback/post-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/post-feedback/post-feedback.component.html
@@ -1,37 +1,38 @@
 <link rel="stylesheet" href="post-feedback.component.css">
 <div class="jumbotron">
     <h1 class="display-4">Post patient's feedback</h1>
-    <hr>
 </div>
 <div class="container">
-    
-    <form #form="ngForm" autocomplete="off" class="padd"> 
+    <form id="post-form" [formGroup]="postForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-            <textarea rows="4" cols="5" class="form-control" placeholder="Comment..." #AdditionalNotes="ngModel" [(ngModel)]="service.formData.AdditionalNotes"></textarea>
-            <label for="approved">Let others see your post?</label>
+        <textarea rows="4" cols="5" name="additionalNotes" class="form-control" placeholder="Comment..." id="additionalNotes" formControlName="additionalNotes"></textarea>
+        <span *ngIf="!postForm.get('additionalNotes').valid && postForm.get('additionalNotes').touched">
+            <span *ngIf="postForm.get('additionalNotes').errors['minLength']">Minimum length of a comment is 2 characters.
+            </span>
+        </span>
+        <br>
+        <label for="allowed">Let others see your post?</label>
             <div>
-                <input id="yes" type="radio" value="yes" name="approved" formControlName="approved">
+                <input id="allowedYes" type="radio" value="yes" name="allowed" formControlName="allowed" checked>
                 <label for="yes">Yes</label>
             </div>
 
             <div>
-                <input id="no" type="radio" value="no" name="approved" formControlName="approved">
+                <input id="allowedNo" type="radio" value="no" name="allowed" formControlName="allowed">
                 <label for="no">No</label>
             </div>
-            <label for="anonymous">Would you like to stay anonymous?</label>
+        <label for="anonymous">Would you like to stay anonymous?</label>
             <div>
-                <input id="yes" type="radio" value="yes" name="anonymous" formControlName="anonymous">
+                <input id="anonymousYes" type="radio" value="yes" name="anonymous" formControlName="anonymous" checked> 
                 <label for="yes">Yes</label>
             </div>
-
             <div>
-                <input id="no" type="radio" value="no" name="anonymous" formControlName="anonymous">
+                <input id="anonymousNo" type="radio" value="no" name="anonymous" formControlName="anonymous">
                 <label for="no">No</label>
             </div>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-success btn-lg"type="submit">Submit</button>
+        <button type="submit" class="btn btn-success btn-lg" [disabled]="postForm.invalid">Submit</button>
         </div>
     </form>
+   
 </div>
 
